trying to fix alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,6 +17,8 @@
     border: 1px outset aliceblue;
     border-style: outset;
     text-align: center;
+    display: inline-block;
+    vertical-align: top;
     width: 100%;
 }
 
